--- a/doc/功能简介.md
+++ b/doc/功能简介.md
@@ -1,7 +1,7 @@
 # EnjoySDK 功能简介
 
 ### EnjoySDK 版本信息
-当前版本为 V1.0.0 版本
+当前 EnjoySDK 版本信息。
 
 ---
 
@@ -127,11 +127,11 @@
 
 ---
 
-### 屏幕旋转
+### 系统方向旋转
 
 #### 功能概述
-屏幕旋转功能用于对迈冲智能设备的屏幕方向设置。
-屏幕旋转功能主要有三个配置，分别为主屏幕系统方向，主屏幕应用方向和副屏幕（HDMI）方向。
+系统方向旋转功能用于对迈冲智能设备的屏幕方向设置。
+系统方向旋转功能主要有三个配置，分别为主屏幕系统方向，主屏幕应用方向和副屏幕（HDMI）方向。
 
 #### 使用条件：
 
@@ -184,9 +184,9 @@
 
 ---
 
-### 获取硬件信息接口
+### 获取系统信息接口
 #### 功能概述：
-获取硬件信息接口用于获取硬件信息，该接口现在有三个硬件信息可以获取，分别为CPU的温度，CPU的使用率，设备运行时间。
+获取系统信息接口用于获取系统信息，该接口现在有三个系统信息可以获取，分别为CPU的温度，CPU的使用率，设备运行时间。
 
 #### 使用条件：
 系统中集成了 EnjoySDK V1.0.0 或以上版本。
